--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
 
    <header class="cabeçalho">
+     <div class="container">
+   <span class="cabeçalho_menu-hamburguer container__imagem"></span>
+   <img src="img/Logo.svg" alt="Logo Alura AluraBooks" class="container__imagem">
+         </div>
+      <div class="container">
+   <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+   <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+   <a href="#"><img src="img/Usuario.png" alt="Meu perfil" class="container__imagem"></a>
+        </div>
 
-   <span class="cabeçalho_menu-hamburguer"></span>
-   <img src="img/Logo.svg" alt="Logo Alura AluraBooks">
-   <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-   <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-   <a href="#"><img src="img/Usuario.png" alt="Meu perfil"></a>
 
 </header>
 </body>
