--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
      <meta name="viewport" content="width=device-width, inicial-scale=1.0">
      <title>AluraBooks</title>
      <link rel="stylesheet" href="styles.css">
-    
+     <link rel="stylesheet" hreff="reset.css">
 </head>
 <body>
 
    <header class="cabeçalho">
      <div class="container">
-   <span class="cabeçalho_menu-hamburguer container__imagem"></span>
+        <input type="checkbox" id="menu" class="container__botao">
+         <label for="menu">
+   <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+           <li class="lista-menu__titulo">Categorias</li>
+           <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Programaçao</a>
+    </li>
+    <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">front-end</a>
+</li> 
+   <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">infraestrutura</a>
+</li>
+    <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">Business</a>
+</li>
+     <li class="lista-menu__item">
+<a href="#" class="lista-menu__link">Design & UK</a>
+</li>
+        </ul>
    <img src="img/Logo.svg" alt="Logo Alura AluraBooks" class="container__imagem">
          </div>
       <div class="container">
