--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#" class="lista-menu__link">Business</a>
 </li>
      <li class="lista-menu__item">
-<a href="#" class="lista-menu__link">Design & UK</a>
+<a href="#" class="lista-menu__link">Design & UX</a>
 </li>
         </ul>
    <img src="img/Logo.svg" alt="Logo Alura AluraBooks" class="container__imagem">
